# openclaw-redesign-awsbedrock

./: .gitignore  Dockerfile  README.md  chat_ui.py  main.py  pyproject.toml  requirements.txt  run_tests.py
agent/: __init__.py  chat_ui.py  config.py  heartbeat.py  identity.py  main.py  memory.py  model_router.py  models.py  orchestrator.py
agent/tools/: __init__.py  _decorator.py  gateway_tools.py  identity_tools.py  memory_tools.py  schedules.py  tasks.py  utils.py
identity_files/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
infra/: .cdkignore  app.py  cdk.json  requirements.txt
infra/lambda/: agent_invoker.py  gateway_tools.py  scheduler_invoker.py
infra/stacks/: agent_stack.py
tests/: __init__.py  test_chat_ui.py  test_deployment_config.py  test_heartbeat.py  test_identity.py  test_main.py  test_memory.py  test_model_router.py  test_models_smoke.py  test_orchestrator.py  test_prop_agent_id.py  test_prop_cdk.py  test_prop_config_models.py  test_prop_heartbeat.py  test_prop_identity_bundle.py  test_prop_memory.py  test_prop_schedule_item.py  test_prop_schedules.py  test_prop_system_prompt.py  test_prop_task_item.py  test_prop_tasks.py  test_schedules_tool.py  test_tasks_tool.py  test_tool_registry.py
